# comfyui_queue_sidebar

./: .gitignore  LICENSE  README.md  README_zhTW.md  package.json  playwright.config.mjs  pyproject.toml  vitest.config.js
.github/workflows/: publish.yml  release.yml  test.yml
e2e/: helpers.mjs  queue-sidebar.spec.mjs
tests/: comfyAdapter.test.js  contextMenu.test.js  helpers.test.js  outputCache.test.js  preview.test.js  render.test.js
web/: queue-sidebar.js
web/lib/: comfyAdapter.js  constants.js  contextMenu.js  gallery.js  helpers.js  outputCache.js  preview.js  toolbar.js
web/locales/: en.json  zh.json
