[project]
name = "comfyui-queue-sidebar"
version = "1.0.0"
description = "ComfyUI sidebar extension — brings back the queue panel with image previews"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Zhen-Bo/comfyui_queue_sidebar"

[tool.comfy]
PublisherId = "kevinsun"
DisplayName = "ComfyUI Queue Sidebar"
